tdf#143728 Certain presentation crashes Impress after starting slideshow

Revert "osl::Mutex->std::mutex in EventQueue"
This reverts commit c0ce120b55ba389729e97babf80f2cb39ce38e9f.

because we try to take the same lock twice

Change-Id: Ie62659ec3407089f616d1ea950a3755300d68eef